frontend-operator/manfiests/ingress/frontend-operator-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 namespace: operator-ns
 name: frontend-operator-ingress
 annotations:
  cert-manager.io/cluster-issuer: letsencrypt-operator
  nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
 tls:
 - hosts:
   - valhasoftoperator.uk
   secretName: frontend-operator-tls
 ingressClassName: nginx
 rules:
 - host: valhasoftoperator.uk
   http:
     paths:
      - pathType: Prefix
        path: /
        backend:
         service:
           name: frontend-operator
           port:
            number: 80
